--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@iconify-json/simple-icons": "^1.1.90",
     "astro": "^4.3.5",
     "astro-icon": "^1.1.0",
+    "astro-seo": "^0.8.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
